--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-portfolio",
   "version": "0.1.0",
-  "homepage": "https://vidramage.github.io/portfolio",
+  "homepage": "https://vidramage.github.io/",
   "private": true,
   "dependencies": {
     "@fortawesome/free-brands-svg-icons": "^6.1.2",
@@ -17,6 +17,7 @@
     "react-dom": "^18.2.0",
     "react-leaflet": "^4.0.1",
     "react-loaders": "^3.0.1",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
     "sass": "^1.54.3",
