--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-portfolio",
   "version": "0.1.0",
-  "homepage": "https://vidramage.github.io/portfolio",
+  "homepage": "https://vidramage.github.io/",
   "private": true,
   "dependencies": {
     "@fortawesome/free-brands-svg-icons": "^6.1.2",
